[project]
name = "plugin-module-pyftpdlib"
version = "0.1.0"
description = "Very fast asynchronous FTP server library - https://pypi.org/project/pyftpdlib/"
authors = [
    { name = "Florence Wolfe", email = "florencewolfe@pm.me" }
]
dependencies = [
    "pyftpdlib>=1.5.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
